@@ -13,7 +13,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #23421: Fixed compression in tarfile CLI.  Patch by wdv4758h.
+
 - Issue #23361: Fix possible overflow in Windows subprocess creation code.
+
 
 What's New in Python 3.4.3rc1?
 ==============================
